# research-corpus

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REVIEW_FINDINGS.md  SKILL.md  pyproject.toml
mcp/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  RULES.md  docker-compose.yml  pyproject.toml
mcp/docs/: AGENTS_zh.md  README_zh.md  ROADMAP_zh.md  RULES_zh.md
mcp/docs/notebooklm-py-survey/: chat_research.md  cli_api.md  content_generation.md  index.md  notebooks_sources.md
mcp/openspec/changes/archive/2026-04-22-add-fastmcp-entrypoint/: design.md  proposal.md  tasks.md
mcp/openspec/changes/archive/2026-04-22-add-fastmcp-entrypoint/specs/fastmcp-entrypoint/: spec.md
mcp/openspec/changes/archive/2026-04-22-advanced-resource-management/: design.md  proposal.md  tasks.md
mcp/openspec/changes/archive/2026-04-22-advanced-resource-management/specs/chat-history/: spec.md
mcp/openspec/changes/archive/2026-04-22-init-mcp-server/: design.md  proposal.md  tasks.md
mcp/openspec/changes/archive/2026-04-22-init-mcp-server/specs/chat-interaction/: spec.md
mcp/openspec/specs/auth-management/: spec.md
mcp/openspec/specs/chat-interaction/: spec.md
mcp/openspec/specs/mcp-server-core/: spec.md
mcp/openspec/specs/notebook-management/: spec.md
mcp/openspec/specs/source-management/: spec.md
mcp/skills/nblm-mcp-skill/: SKILL.md
mcp/skills/nblm-mcp-skill/agents/: openai.yaml
mcp/skills/nblm-mcp-skill/references/: workflows.md
mcp/src/nblm_mcp_server/: __init__.py  __main__.py  client_service.py  server.py  tools.py
(+372 files in other folders)
